style.css
.btn-margin {
  margin-top: 7px
}

a {
  cursor: pointer;
}

.profile-area img {
  max-width: 150px;
  margin-bottom: 20px;
}

.panel-body h3 {
  margin-top: 0;
}

.loading {
  position: absolute;
  display: flex;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #fff;
}















body {
    margin: 0;
}

.mi-nav-contaier {
    position: fixed;
    height: 75px;
    background-color: rgb(178, 241, 213);
    left: 0;
    right: 0;
}

.mi-header-desktop {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-around;
}

.mi-header-section {
    flex: 0 1 auto;
    height: 100%;
    display: flex;
    align-items: center;
}

.mi-header-link {
    height:100%;
    display: inline-flex;
    align-items: center;
    text-decoration: none;
    padding: 0 15px;
    position: relative;
    font-weight: 700;
    color: #6e7a7d;
}
.mi-header-link-box{
    height:100%;
    align-items: center;
    display:flex;
    box-sizing: border-box;
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
    transition: border-bottom-color .2s ease;
}
.mi-header-link-box:hover{
    border-bottom-color: black;
}

.mi-header-mobile {
    display: none;
}

@media only screen and (max-width: 800px) {
    .mi-header-desktop {
        display: none;
    }
    .mi-header-mobile {
        display: block;
    }
}

.mi-body {
    margin: 0 auto;
    padding-top: 75px;
    width: 800px;
    height: 600px;
}

.mi-pricing {
    display: flex;
    justify-content: space-between;
    padding: 10 0;
    width: 810px;
    background-color: rgb(190, 188, 188);
}

.mi-pricing-section {
    background-color: white;
    width:400px;
    height: 600px;
}
.mi-card-container{
    height: 525px;
    overflow: auto;
}
.mi-card-container h1{
    text-align: center
}
.mi-cart-options{
    height:75px;
    display:flex;
    justify-content: space-around;
    align-items:  center;
}
.mi-cart-options-container{
    font-size: 1.25em;
}
.mi-card{
    font-family: 'Open Sans', sans-serif;
    font-size: .8em;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-between;
    border-top: 4px solid blue;
    border-bottom: 4px solid blue;
    padding: 0 2;
    height: 110px;
    border: 1px solid rgb(198, 147, 217);
    margin-bottom: 1px;
}
.mi-card-section{
}
.mi-card-price-container{
    display:flex;
    height:100%;
}
.mi-card-price-section{
    display:flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 0 3;
    height: 100%;
}
.mi-card-price-section input{
    padding: 1px;
    text-align: center;
    width: 40px;
    margin-left: 4px;
}
.mi-card-image{
    height:105px;
    width:78px;
    position: relative;
    background-size: contain;
}
.mi-card-image:active{
    height:310;
    width:223;
    z-index: 2;
}
.mi-search-level{
    padding-top: 4px;
    display:flex;
    justify-content: space-around;
}
.mi-search-level button{
    display: block;
    border: none;
    width: 100px;
    margin: 0px auto;
    outline: none;
    border-radius: 5px;
    color: rgb(255, 255, 255);
    background-color: rgb(27, 183, 194);
    font-size: 16px;
    padding: 10px 15px 10px 15px;
    transition: background-color .5s, color .5s;
}
.mi-search-basic{
    width: 100%;
    padding-top: 4px;
}
.mi-search-row{
    width:100%;
    display:flex;
    justify-content: center;
}
.mi-input{
    font-size: 20px;
    padding: 5px;
    width: 300px;
    border: 1px solid #bcbec1;
}
.mi-search-advanced{
    display:flex;
}
.mi-search-advanced-section{
    padding: 5px;
}

